<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.HomePageFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                android:id="@+id/card_view1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:backgroundTint="#FFE28F"
                android:visibility="visible"
                app:cardCornerRadius="10dp"
                app:cardUseCompatPadding="true"
                app:contentPadding="10dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/imgLamp"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_alignParentStart="true"
                        android:layout_centerVertical="true"
                        android:src="@drawable/lamp"
                        app:tint="#7A7A7A" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_marginStart="10dp"
                        android:layout_toEndOf="@+id/imgLamp"
                        android:text="@string/hint_to_scan_card"
                        android:textColor="#7A7A7A"
                        android:textSize="18sp" />

                </RelativeLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/card_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/card_view1"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:background="@color/white_gray"
                app:cardCornerRadius="10dp"
                app:cardUseCompatPadding="true"
                app:contentPadding="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:paddingStart="5dp"
                        android:text="@string/accounts"
                        android:textSize="30sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:paddingStart="15dp"
                        android:text="@string/pocket_money"
                        android:textSize="18sp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <androidx.cardview.widget.CardView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:backgroundTint="@color/blue"
                            app:cardCornerRadius="5dp"
                            app:cardUseCompatPadding="true"
                            app:contentPadding="5dp">

                            <TextView
                                android:id="@+id/accountCard1"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="0"
                                android:textColor="@color/white"
                                android:textSize="20dp"
                                android:textStyle="bold" />

                        </androidx.cardview.widget.CardView>
                    </LinearLayout>

                    <TextView
                        android:id="@+id/tv_Card"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:paddingStart="15dp"
                        android:text="@string/card"
                        android:textSize="18sp"
                        android:visibility="visible" />

                    <LinearLayout
                        android:id="@+id/line_Card"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        android:visibility="visible">

                        <androidx.cardview.widget.CardView
                            android:id="@+id/card_view_card1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:backgroundTint="@color/purple"
                            android:visibility="visible"
                            app:cardCornerRadius="5dp"
                            app:cardUseCompatPadding="true"
                            app:contentPadding="5dp">

                            <TextView
                                android:id="@+id/accountCard2"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="0"
                                android:textColor="@color/white"
                                android:textSize="20dp" />

                        </androidx.cardview.widget.CardView>

                        <androidx.cardview.widget.CardView
                            android:id="@+id/card_view_card2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:backgroundTint="@color/red"
                            android:visibility="visible"
                            app:cardCornerRadius="5dp"
                            app:cardUseCompatPadding="true"
                            app:contentPadding="5dp">

                            <TextView
                                android:id="@+id/accountCard3"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="0"
                                android:textColor="@color/white"
                                android:textSize="20dp" />

                        </androidx.cardview.widget.CardView>

                    </LinearLayout>

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/card_view2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/card_view"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:background="@color/white_gray"
                app:cardCornerRadius="10dp"
                app:cardUseCompatPadding="true"
                app:contentPadding="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:paddingStart="5dp"
                        android:text="@string/planned_notes"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recyclerNoteHome"
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        android:visibility="gone"
                        tools:listitem="@layout/unique_note" />

                    <ImageView
                        android:id="@+id/imgEmptyFolder"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="20dp"
                        android:src="@drawable/empty_folder" />

                    <TextView
                        android:id="@+id/tvEmpty"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginBottom="20dp"
                        android:text="Пусто. Добавьте заметки"
                        android:textSize="20sp" />

                    <Button
                        android:id="@+id/btnShowMoreNotes"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/wallet_background"
                        android:text="@string/show_more"
                        android:textColor="@color/white" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <Button
                android:id="@+id/btnSaveCards"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:backgroundTint="#A65F21"
                android:text="Сохранить данные о карте"
                android:textColor="@color/white"
                android:layout_below="@+id/card_view2"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginHorizontal="10dp"/>
        </RelativeLayout>
    </ScrollView>
</FrameLayout>